# linguistic-data-science

./: .gitignore  README.md  complexity_visualizations.ipynb  config.json  main.py  model_comparison.py  new_full_analysis.ipynb  podcast_analysis.ipynb  podcast_downloader.py  podcast_topic_comparison.ipynb  pyproject.toml  topic_analysis.py
complexity/: podcast_complexity_analysis.ipynb
src/: download.py  transcribe.py
transcription/: data-inspection.ipynb  downloader.py  requirements.txt  transcribe_episodes.py  transcriber.py
transcription/src/: download.py  transcribe.py
vocabulary/: vocabulary.ipynb
